--- a/api/internal/api-host-res-internal.yaml
+++ b/api/internal/api-host-res-internal.yaml
@@ -7,16 +7,17 @@ tags:
 paths:
   /v1/internal/resource/host/{host_id}:
     get:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30092
+      x-access-port: 30081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       produces:
         - application/json
       parameters:
@@ -44,16 +45,17 @@ paths:
       summary: 根据主机ID查询主机信息【内部接口】
   /v1/internal/resource/host/{host_id}/refresh_host:
     put:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
-      x-impact-subsystem: 影响
-      x-access-port: 30092
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       produces:
         - application/json
       parameters:
@@ -101,16 +103,17 @@ paths:
       summary: 刷新主机信息【内部接口】
   /v1/internal/resource/host/{host_id}/asm-info:
     get:
+      x-dr-role: 'N'
       x-product: OceanProtect X
-      x-dm-role: 'Y'
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30092
+      x-access-port: 30081
       x-auth-required: 'N'
-      x-rd-admin-role: 'Y'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - host
       summary: 根据主机ID查询主机ASM信息列表
