--- a/api/internal/api-copy-detection-internal.yaml
+++ b/api/internal/api-copy-detection-internal.yaml
@@ -16,9 +16,9 @@ paths:
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
-      x-sysadmin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-sysadmin-role: 'N'
       x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000
       tags:
         - copies
@@ -60,14 +60,14 @@ paths:
       x-dr-role: 'N'
       x-dm-role: 'N'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
-      x-sysadmin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-sysadmin-role: 'N'
       x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000
       x-impact-subsystem: 不影响
       tags:
         - copies
-      x-access-port: 30092
+      x-access-port: 30081
       x-auth-required: 'N'
       x-public-api: 'N'
       operationId: ShowDetectionReport
@@ -113,9 +113,9 @@ paths:
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
-      x-sysadmin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-sysadmin-role: 'N'
       x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000
       x-access-port: 30092
       x-auth-required: 'N'
@@ -168,13 +168,13 @@ paths:
       x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30092
+      x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       summary: 获得资源维度副本防勒索统计列表 - 内部接口
       description: 获得资源维度副本防勒索统计列表 - 内部接口
       operationId: ShowDetectionStatistics
@@ -213,13 +213,13 @@ paths:
       x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30092
+      x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
-      x-auditor-role: 'Y'
-      x-dp-admin-role: 'Y'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - copies
       summary: 获取副本维度的防勒索检测信息列表 - 内部接口
