--- a/api/internal/api-liveMount-internal.yaml
+++ b/api/internal/api-liveMount-internal.yaml
@@ -61,16 +61,17 @@ paths:
       deprecated: false
   /v1/internal/live-mount/action/cancel:
     put:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
+      x-access-port: 30081
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
-      x-dp-admin-role: 'Y'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       tags:
         - live-mount-internal-controller
       summary: cancelJob
@@ -104,15 +105,16 @@ paths:
       deprecated: false
   /v1/internal/live-mount/action/revoke/{user_id}:
     put:
+      x-dr-role: 'N'
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
+      x-access-port: 30081
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
-      x-dp-admin-role: 'Y'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       x-product: CyberEngine,OceanProtect X
       tags:
         - live-mount-internal-controller
@@ -190,15 +192,16 @@ paths:
       deprecated: false
   /v1/internal/live-mount/policy/action/revoke/{user_id}:
     put:
+      x-dr-role: 'N'
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
+      x-access-port: 30081
+      x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
-      x-dp-admin-role: 'Y'
+      x-dp-admin-role: 'N'
       x-public-api: 'N'
-      x-sysadmin-role: 'Y'
+      x-sysadmin-role: 'N'
       x-product: CyberEngine,OceanProtect X
       tags:
         - live-mount-policy-internal-controller
