--- a/api/internal/api-user-internal.yaml
+++ b/api/internal/api-user-internal.yaml
@@ -12,6 +12,53 @@ tags:
   - name: users-internal-api
     description: ${users-internal-api}
 paths:
+  /v1/internal/auth/token:
+    post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      tags:
+        - auth-internal-api
+      summary: 获取token
+      operationId: genTokenUsingPOST_1
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - in: body
+          name: userInfo
+          description: userInfo
+          required: true
+          schema:
+            $ref: '#/definitions/UserInfo'
+            originalRef: UserInfo
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/LoginResponseBody'
+            originalRef: LoginResponseBody
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      security:
+        - Authorization:
+            - global
+      deprecated: false
   /v1/internal/auth/user:
     get:
       x-dr-role: 'N'
